--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "movies-finder",
   "version": "1.0.0",
   "description": "movies finde rplugin for webview-bridged",
-  "main": "./dist/index.js",
-  "types": "./dist/types.d.ts",
- 
-
+  "main": "./index.js",
+  "types": "./dist/src/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-node test.ts",
     "build": "tsc && webpack",
     "start": "npx babel src --watch --out-dir dist",
     "webpack": "webpack",
@@ -21,7 +19,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.191",
+    "axios": "^1.4.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
