--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 example/*
 example
 
+
+
 # Logs
 logs
 *.log
@@ -92,7 +94,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-#dist
+dist
 
 # Gatsby files
 .cache/
