--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "types": "./dist/src/index.d.ts",
   "scripts": {
     "test": "ts-node test.ts",
-    "build": "tsc && webpack",
-    "start": "npx babel src --watch --out-dir dist",
-    "webpack": "webpack",
-    "prepublish": "yarn build && yarn webpack",
-    "server": "webpack server"
+    "build": "tsc",
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [
     "finder"
@@ -20,12 +18,8 @@
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "axios": "^1.4.0",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
