--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": [
-    "./test.ts",
+    "./tests",
   ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
